--- a/webinterface.XWMM/Changelog.txt
+++ b/webinterface.XWMM/Changelog.txt
@@ -1,15 +1,18 @@
-
-
 XWMM Change log
 
-1.8.0 : 
+1.8.0
 - Added actor management
 
-1.8.1 : 
+1.8.1
 - Improved music interface
 
-1.9.0 : 
+1.9.0
 - Removed cache folder (not required anymore)
 - Added addon.xml and icon.png for addon support
 
+1.9.1
+- Fixes :
+	- Fixed genre list display was not always showing
+	- Fixed movie information not always showing
+	- Fixed changing covers and fanart in movies
 		
