--- a/webinterface.XWMM/Changelog.txt
+++ b/webinterface.XWMM/Changelog.txt
@@ -1,18 +1,14 @@
 XWMM Change log
-
-1.8.0
-- Added actor management
-
-1.8.1
-- Improved music interface
-
-1.9.0
-- Removed cache folder (not required anymore)
-- Added addon.xml and icon.png for addon support
-
 1.9.1
 - Fixes :
 	- Fixed genre list display was not always showing
 	- Fixed movie information not always showing
 	- Fixed changing covers and fanart in movies
-		
+
+1.9.2
+- Fixes :
+	- Fixed genre list display was not always showing in TV Shows
+	- Fixed episode list not always showing
+- Added :
+	- Scraper list is created dynamicly from installed add-ons
+	- Fanart display in Movie interface
