--- a/webinterface.XWMM/changelog.txt
+++ b/webinterface.XWMM/changelog.txt
@@ -34,3 +34,9 @@ XWMM Change log
 2.0.2
 - Fixes:
 -- Compatibility with XBMC Addons standards
+
+2.0.3
+- Fixes:
+-- Movie Genres updates
+-- TvShow save
+-- Music save
