--- a/webinterface.awxi/changelog.txt
+++ b/webinterface.awxi/changelog.txt
@@ -1,3 +1,19 @@
+0.5.2
+ - Added Uni UI. Consider the others depreciated.
+ - Added Play and enqueue music genre.
+ - Added Artist info and enqueue all.
+ - Added Start Page. Defaults to Recent TV.
+ - Added Better playlist identification and labelling.
+ - Added Currently playing stream info in footer (Uni UI only).
+ - Fixed Playlists containing streams and not local files.
+ - Fixed Youtube trailer link.
+ - Fixed Some Windows issues? Please let me know if you have any problems on Windows.
+ - Changed Logo walls now support lazyload.
+ - Changed Movie Set sorts by label.
+ - Changed Action menus (play, enqueue etc.) can be activated on hover or click.
+ - Changed Files in file view are listed as filename instead of XBMC label.
+ - Update Lazyload to 1.7.2.
+
 0.5.1
  - Added Artists views
  - Added Logo wall for artists and TV show. Does not support lazyload!
