--- a/webinterface.pwi/changelog.txt
+++ b/webinterface.pwi/changelog.txt
@@ -1,3 +1,6 @@
+v 0.1.3 (20120527)
+- Bug fix: now the currently playing time shows hours too
+
 v 0.1.2 (20120524)
 - Added playback buttons in footer
 - Page data is stored locally (no loss on refresh anymore)
