--- a/webinterface.pwi/changelog.txt
+++ b/webinterface.pwi/changelog.txt
@@ -1,3 +1,7 @@
+v 0.1.4 (20120605)
+- Added the possibility for browsing the artists by album
+- Bug fix: firing multiple actions on remote is fixed
+
 v 0.1.3 (20120527)
 - Bug fix: now the currently playing time shows hours too
 
