--- a/webinterface.awxi/changelog.txt
+++ b/webinterface.awxi/changelog.txt
@@ -1,3 +1,13 @@
+0.6.2
+  - Added full screen mode.
+  - Added thumbnail episode view with no plot.
+  - Added movie cleart and landscape views.
+  - Added music video limiting.
+  - Added scroll to currently playing item in music playlist.
+  - Search for titles in relevent pages.
+  - Replicate XBMC key functions. If you have the control window open (press the remote icon bottom right); home, left, backspace, x, c etc. act the same as in XBMC GUI.
+  - Lyric support in full screen. Requires CU LRC Lyrics 1.0.2+. Thanks ronie.
+  
 0.6.1
   - Extra fan art support for random playing background.
   - Ability to disable functions via js/settings.json.
