--- a/webinterface.chorus/changelog.txt
+++ b/webinterface.chorus/changelog.txt
@@ -1,3 +1,24 @@
+Version 0.3.4
+- Browse by genre: albums, tv and movies
+- Browse by year: albums and movies
+- Toggle party mode
+- Lots of UI updates
+- Albums page is now music and has had an overhaul
+- Minor bug fixes
+
+
+Version 0.3.3
+- Audio streaming buffer indicator
+- Movie/TV Sorting abilities
+- Movie/TV Toggle watched status
+- Movie/TV Toggle visibility of watched
+- minor UI updates
+- Remember watched visibility and last player
+- SoundCloud streaming now shows current time
+- Added leading 0 to time formatter when required
+- Added video library scan
+
+
 Version 0.3.2
 - Bug fix: search issue with repeated addons
 - Bug fix: soundcloud search (broken in last release)
