--- a/webinterface.chorus/changelog.txt
+++ b/webinterface.chorus/changelog.txt
@@ -1,3 +1,18 @@
+Version 0.3.6
+- Bug fix: Background changing while pvr playing
+- Feature: pvr channels (unfinished due to tuner breaking during dev)
+- Feature: Support for basic keyboard commands (directional, backspace, enter, c)
+- Refactor: Cleaned up a lot of code
+- Improved loading indicator
+- Some performance tweaks
+
+
+Version 0.3.5
+- Bug fix: Song duration in listings displaying as [object]
+- Bug fix: Mobile playlist tabs
+- Ui fix: Mobile top icons, made click area much larger
+
+
 Version 0.3.4
 - Browse by genre: albums, tv and movies
 - Browse by year: albums and movies
