--- a/webinterface.awxi/resources/language/English/strings.po
+++ b/webinterface.awxi/resources/language/English/strings.po
@@ -139,6 +139,10 @@ msgid "Full Screen"
 msgstr ""
 
 msgctxt "Tool tip"
+msgid "Control Keys"
+msgstr ""
+
+msgctxt "Tool tip"
 msgid "Exit Full Screen"
 msgstr ""
 
@@ -162,8 +166,20 @@ msgctxt "Popup message addition"
 msgid "Failed!"
 msgstr ""
 
+msgctxt "Popup message with addition"
+msgid "Attempting to connect to websocket..."
+msgstr ""
+
 msgctxt "Popup message"
 msgid "Failed to retrieve list!"
+msgstr ""
+
+msgctxt "Popup message"
+msgid "Control keys inactive."
+msgstr ""
+
+msgctxt "Popup message"
+msgid "Control keys active."
 msgstr ""
 
 msgctxt "Popup message"
@@ -357,6 +373,10 @@ msgstr ""
 
 msgctxt "Label"
 msgid "Titles"
+msgstr ""
+
+msgctxt "Label"
+msgid "Cast"
 msgstr ""
 
 msgctxt "Label"
@@ -959,6 +979,10 @@ msgid "Prefer Logos"
 msgstr ""
 
 msgctxt "Settings option"
+msgid "Control display when playing"
+msgstr ""
+
+msgctxt "Settings option"
 msgid "Use fan art as background"
 msgstr ""
 
@@ -1129,6 +1153,12 @@ msgstr ""
 msgctxt "Label"
 msgid "Genre:"
 msgid_plural "Genres:"
+msgstr[0] ""
+msgstr[1] ""
+
+msgctxt "Label"
+msgid "Tag:"
+msgid_plural "Tags:"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -1429,6 +1459,10 @@ msgstr ""
 
 msgctxt "Alert"
 msgid "Please select a language!"
+msgstr ""
+
+msgctxt "Alert"
+msgid "Unable to save settings! Please use a modern browser capable of local storage and enable it\'s access for this site."
 msgstr ""
 
 msgctxt "Alert"
