--- a/webinterface.awxi/resources/language/English/strings.po
+++ b/webinterface.awxi/resources/language/English/strings.po
@@ -187,6 +187,14 @@ msgid "Failed to retrieve information!"
 msgstr ""
 
 msgctxt "Popup message"
+msgid "Failed to connect to websocket, retrying..."
+msgstr ""
+
+msgctxt "Popup message"
+msgid "Failed to connect to websocket, switching to polling..."
+msgstr ""
+
+msgctxt "Popup message"
 msgid "Failed to send command!"
 msgstr ""
 
@@ -257,6 +265,10 @@ msgstr ""
 
 msgctxt "Popup message"
 msgid "Failed to remove playlist item... "
+msgstr ""
+
+msgctxt "Popup message"
+msgid "Automatic fullscreen mode cancelled"
 msgstr ""
 
 msgctxt "Popup message"
@@ -360,6 +372,14 @@ msgstr ""
 
 msgctxt "Popup message"
 msgid "Failed to start recording"
+msgstr ""
+
+msgctxt "Popup message"
+msgid "Saved Kodi setting"
+msgstr ""
+
+msgctxt "Popup message"
+msgid "Failed to load Kodi settings!"
 msgstr ""
 
 msgid "Please create a Party Mode playlist"
@@ -740,11 +760,51 @@ msgid "Start Page"
 msgstr ""
 
 msgctxt "Settings label"
+msgid "Input keys"
+msgstr ""
+
+msgctxt "Settings label"
+msgid "Action on play"
+msgstr ""
+
+msgctxt "Settings label"
 msgid "Language"
 msgstr ""
 
 msgctxt "Settings label"
 msgid "Profiles"
+msgstr ""
+
+msgctxt "Settings option"
+msgid "Always inactive"
+msgstr ""
+
+msgctxt "Settings option"
+msgid "Active when playing"
+msgstr ""
+
+msgctxt "Settings option"
+msgid "Always active"
+msgstr ""
+
+msgctxt "Settings option"
+msgid "Show player controls"
+msgstr ""
+
+msgctxt "Settings option"
+msgid "Always show player controls"
+msgstr ""
+
+msgctxt "Settings option"
+msgid "Do nothing"
+msgstr ""
+
+msgctxt "Settings option"
+msgid "Fullscreen mode"
+msgstr ""
+
+msgctxt "Settings option"
+msgid "Fullscreen mode with lyrics"
 msgstr ""
 
 msgctxt "Settings option"
@@ -841,6 +901,10 @@ msgstr ""
 
 msgctxt "Settings tab"
 msgid "Sorting"
+msgstr ""
+
+msgctxt "Settings tab"
+msgid "Kodi Settings"
 msgstr ""
 
 msgctxt "Footer label"
@@ -1055,6 +1119,10 @@ msgid "Poster"
 msgstr ""
 
 msgctxt "Label"
+msgid "Switch to channel"
+msgstr ""
+
+msgctxt "Label"
 msgid "Fan Art"
 msgstr ""
 
@@ -1144,6 +1212,14 @@ msgstr ""
 
 msgctxt "Label"
 msgid "Run Time:"
+msgstr ""
+
+msgctxt "Label"
+msgid "Start Time:"
+msgstr ""
+
+msgctxt "Label"
+msgid "End Time:"
 msgstr ""
 
 msgctxt "Label"
