--- a/webinterface.arch/changelog.txt
+++ b/webinterface.arch/changelog.txt
@@ -1,3 +1,13 @@
+v1.2.2
+- Deeper trakt integration on details view
+  - Add to history
+  - Add to collection
+  - Add to watchlist
+v1.2.1
+- Enhanced TV show calendar, navigation between months
+- Animated movies/ tv shows fanarts
+- Full compatibility IE11/Firefox
+- Various bug fixes
 v1.2.0
 - Add search functionnality for movies and shows 
 - Add scan button
