--- a/webinterface.arch/changelog.txt
+++ b/webinterface.arch/changelog.txt
@@ -1,3 +1,7 @@
+v2.0.3
+- Bug fix: Proper screen is displayed whenlibrary contains no element.
+- Bug fix: Movies/Shows images not displayed when name contains some specials characters
+- Bug fix: Missing trakt logo
 v2.0.2
 - Deeper trakt integration on details view
   - Add to history
@@ -8,8 +12,8 @@ v2.0.1
 - Animated movies/ tv shows fanarts
 - Full compatibility IE11/Firefox
 - Various bug fixes
-v2.0.0
-- Add search functionnality for movies and shows 
+v1.2.0/v2.0.0
+- Add search functionnality for movies and shows
 - Add scan button
 - Add list of queued items
 - Add queue option for single song
