--- a/webinterface.tex/assets/i18n/en.json
+++ b/webinterface.tex/assets/i18n/en.json
@@ -2,7 +2,7 @@
     "header" : {
         "movies" : "Movies",
         "tvshows" : "TV Shows",
-        "musics" : "Musics",
+        "musics" : "Music",
         "player" : "Player",
         "remote" : "Remote",
         "settings" : "Settings",
@@ -22,7 +22,7 @@
         "unwatched" : "Unwatched",
         "movies" : "Movies",
         "tvshows" : "TV Shows",
-        "musics" : "Musics",
+        "musics" : "Music",
 
         "nothingToShow" : "Nothing to show",
         "changeFilterToFindSomething" : "Change filters to find something",
@@ -52,10 +52,10 @@
         "recentlyAddedAlbums" : "Recently added albums",
         "mostPlayedAlbums" : "Most played albums",
 
-        "allMusics" : "All musics",
+        "allMusics" : "All music",
 
         "filters" : "Filters",
-
+        
         "details" : {
             "genres" : "Genres:",
             "totalDiscs" : "Total disks:",
@@ -69,7 +69,7 @@
             "formed" : "Formed:",
             "disbanded" : "Disbanded:",
             "episodes" : "Episodes:",
-            "musicsBy" : "Musics by",
+            "musicsBy" : "Music by",
             "playButton": "Play",
             "playNext" : "Play next",
             "rating" : "Viewers rating: {{ value }}%",
@@ -90,7 +90,30 @@
             "noSeasonAvailable" : "No season available",
             "getStreamingLink" : "Get streaming link",
             "additionalInformation" : "Additional information",
-            "refresh" : "Refresh data"
+            "refresh" : "Refresh data",
+            "streamVideo": "Video:",
+            "streamAudio" : "Audio:",
+            "streamSubtitle": "Subtitle:",    
+            "edit": "Edit"
+        },
+
+        "edit" : {
+            "title" : "Title:",
+            "plot" : "Plot:",
+            "tagline" : "Tagline:",
+            "studio" : "Studio:",
+            "year": "Year:",
+            "directors" : "Directors:",
+            "writers" : "Writers:",
+            "genres" : "Genres:",
+            "country" : "Countries:",
+            "set" : "Set:",
+            "tags" : "Tags:",
+            "refresh" : "Refresh",
+            "remove" : "Remove",
+            "save" : "Save",
+            "cancel": "Cancel",
+            "confirm" : "Confirm"
         },
 
         "musicsView" : {
@@ -111,14 +134,17 @@
     },
     "player" : {
         "playlist" : "Playlist",
-        "noMedia" : "No media"
+        "noMedia" : "No media",
+        "languages" : "Languages:",
+        "subtitles" : "Subtitles:",
+        "disabled" : "Disabled"
     },
     "settings" : {
         "settings" : "Settings",
         "general" : {
             "general" : "General",
             "language" : "Language",
-            "musicsDefaultPlayer" : "Musics default player",
+            "musicsDefaultPlayer" : "Music default player",
             "scanVideoLibrary" : "Scan video library",
             "scanAudioLibrary" : "Scan audio library",
             "cleanVideoLibrary" : "Clean video library",
@@ -130,7 +156,9 @@
             "vibrationOff" : "Vibration Off",
             "mayNotWorkDevice" : "May not work on some devices",
             "translationIssues" : "In case of translation issues, clear cache from your web browser",
-            "refreshTranslation" : "Refresh translations"
+            "refreshTranslation" : "Refresh translations",
+            "currentVersion" : "Current version:",
+            "checkUpdates" : "Check for updates"
         },
         "appearance" : {
             "appearance" : "Appearance"
@@ -148,6 +176,13 @@
             "reset" : "Reset",
             "jsonapi" : "JSON API",
             "sendrequest" : "Send request"
+        },
+        "contribute" : {
+            "contribute" : "Contribute",
+            "t1" : "Adding new features to TeX and continuing development takes a lot of time.",
+            "t2" : "To help me keep my motivation, you can financially support the project by making a donation!",
+            "t3" : "I would be more motivated to add the features requested by the community and fix existing problems.",
+            "makeGift" : "Make a donation"
         }
     },
     "unknown" : "Unknown",
@@ -156,9 +191,16 @@
         "scanFinished" : "Scan finished",
         "cleanStarted" : "Clean started",
         "cleanFinished" : "Clean finished",
-        "contentUpdated" : "Content updated",
-        "updatedTranslations" : "Traductions mises à jour",
-        "refreshPageToSee" : "Refresh the page to see the changes"
+        "success" : "Success",
+        "updatedTranslations" : "Updated translations",
+        "refreshPageToSee" : "Refresh page to see changes",
+        "contentUpdated" : "Content updated. Refresh to see changes.",
+        "error" : "Error",
+        "contentNotUpdated" : "Content not updated",
+        "contentRemoved" : "Content removed. Refresh to see changes.",
+        "contentNotRemoved" : "Content not removed",
+        "appUpdated" : "App successfully updated",
+        "changelogsOnGithub" : "You can find the changelogs on Github."
     },
     "remote" : {
         "sendText" : "Send text"
